tidy, modularized synchronize mechanic

--- a/myreviewer.html
+++ b/myreviewer.html
@@ -46,7 +46,7 @@
 	<br>
 	<hr>
 	<br>
-	<button class="local" id="fromOffline">Submit from Offline</button>
+	<button class="local" id="fromOffline">Synchronize</button>
 	<br>
 	<br>
 	<h1>Display Offline Data</h1>
